Applying transform to a parent mesh with a child node using quaternions visibly changes rotation of child #72935

Closed
opened 2020-01-06 16:21:23 +01:00 by Robert N. · 6 comments

System Information
Operating system: Linux and MacOs (Darwin-18.7.0-x86_64-i386-64bit) tested
Graphics card: AMD Radeon Pro 570

Blender Version
Broken: Blender 2.8, 2.81a, 2.82 Alpha 2020-01-06
Worked: 2.79b

Short description of error
When a child mesh node uses Quaternions and a rotation gets applied to its parent mesh, the child node receives a rotation that changes its appearance.
The "Apply" operation though should keep the appearances exactly as they are.

For this issue to reproduce it doesn’t even matter if you apply Location, Rotation or Scale to the Parent mesh, as long as it has a rotation and its child uses quaternions.
It was working fine in Blender 2.79b.

Exact steps for others to reproduce the error

  1. Create two cubes and parent one to the other
  2. Set the rotation mode of the CHILD node to Quaternions (without any rotation)
  3. Rotate the PARENT node to e.g. 45° on the z axis or any other random rotation. The rotation mode of the parent (Euler, Quaternion) doesn’t matter
  4. Select the PARENT cube and press Ctrl+A to apply either Location, Rotation, Scale or all of them.
  5. Result: The child node gets an unwanted visible rotation. "Apply" should keep the visual state of meshes resp. child nodes.

Illustration
apply_parent_transform_quaternions.jpg

To reproduce you can also use the attached .blend file and apply a transform to the parent mesh node.
apply_rotation_quaternion.blend

**System Information** Operating system: Linux and MacOs (Darwin-18.7.0-x86_64-i386-64bit) tested Graphics card: AMD Radeon Pro 570 **Blender Version** Broken: Blender 2.8, 2.81a, 2.82 Alpha 2020-01-06 Worked: 2.79b **Short description of error** When a child mesh node uses Quaternions and a rotation gets *applied* to its parent mesh, the child node receives a rotation that changes its appearance. The "Apply" operation though should keep the appearances exactly as they are. For this issue to reproduce it doesn’t even matter if you apply Location, Rotation or Scale to the Parent mesh, as long as it has a rotation and its child uses quaternions. It was working fine in Blender 2.79b. **Exact steps for others to reproduce the error** 1. Create two cubes and parent one to the other 2. Set the rotation mode of the CHILD node to Quaternions (without any rotation) 3. Rotate the PARENT node to e.g. 45° on the z axis or any other random rotation. The rotation mode of the parent (Euler, Quaternion) doesn’t matter 4. Select the PARENT cube and press Ctrl+A to apply either Location, Rotation, Scale or all of them. 5. Result: The child node gets an unwanted visible rotation. "Apply" should keep the visual state of meshes resp. child nodes. **Illustration** ![apply_parent_transform_quaternions.jpg](https://archive.blender.org/developer/F8262481/apply_parent_transform_quaternions.jpg) To reproduce you can also use the attached .blend file and apply a transform to the parent mesh node. [apply_rotation_quaternion.blend](https://archive.blender.org/developer/F8262467/apply_rotation_quaternion.blend)
Author

Added subscriber: @RobertN

Added subscriber: @RobertN

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I confirm that it worked in 2.79.

I confirm that it worked in 2.79.

This issue was referenced by bd766f8f06

This issue was referenced by bd766f8f0608d04c473544274b8dd9dcc00ec39a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-01-07 16:43:02 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72935
No description provided.