Fix T72935: Applying transform to parent mesh changes rotation of children using quaternions

`ob->quat` is `v4`.